themes/hugo-tourmaline/static/css/main-site.css
/* ... */
  .articleCategory.learn {
    background-image: url(images/tidyCategoryLearn.svg); }
  .articleCategory.other {
    background-image: url(images/tidyCategoryOther.svg); }

.article-title {
  margin-top: 0px; }

.article-header .photo {
  width: 100%;
  height: 100px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  border-top: 5px solid #e4e4e4; }

.article-header .photoCredit {
  font-size: 12px;
  text-align: right;
  margin: 5px 0 12px 0; }

.package-section .packages .package {
  position: relative;
  height: 200px;
  overflow-y: hidden;
  background-size: 190px 215px;
  background-repeat: no-repeat;
  background-position: left top;
  background-image: url(images/tidy-packages-back-01.svg); }
  .package-section .packages .package:first-of-type {
    background-image: url(images/tidy-packages-back-02.svg); }
  .package-section .packages .package:last-of-type {
    background-image: url(images/tidy-packages-back-03.svg); }
  .package-section .packages .package .package-image {
    position: absolute;
    top: 6px;
    left: 62px;
    width: 120px;
    height: 139px;
    border: none; }
  .package-section .packages .package .package-info {
    margin: 20px 0 0 210px; }

/* CSS for centering images in blog posts */

.article-content img {
    max-width: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

@media screen and (max-width: 767px) {
  .package-section .package-section-info {
    margin-bottom: 20px; }
  .package-section .packages .package, .package-section .packages .package:first-of-type, .package-section .packages .package:last-of-type {
    background-image: none; }
  .package-section .packages .package {
    height: auto;
    overflow-y: auto;
    margin-bottom: 20px; }
    .package-section .packages .package .package-image {
      position: static;
      float: left;
      margin-right: 20px; }
    .package-section .packages .package .package-info {
      margin: 0; } }

/* content */


.article-title {
  font-size: 2.4em;
  margin-bottom: .5em;
  padding-top: 20px;
}

h1, h2, h3, h4, h5, h6 {
  padding-top: 110px;
  margin-top: -72px; }
  h2.noTrickPadding, h3.noTrickPadding, h4.noTrickPadding, h5.noTrickPadding, h6.noTrickPadding {
    padding-top: 0;
    margin-top: 0; }

h1, h2, h3, h4, h5, h6 {
  color: inherit;
  font-weight: 400; }

h1 {
  font-size: 2.4em;
  margin-bottom: .5em; }

h2 {
  font-size: 2.0em;
  margin-bottom: .5em; }

h3 {
  font-size: 1.6em;
  margin-bottom: .5em; }

h4 {
  font-size: 1.2em;
  margin-bottom: .5em; }

p {
  line-height: 1.6em;
  margin-bottom: 1em;
  margin-top: 1em;
}

ul, ol {
  line-height: 2em;
  padding-left: 2em;
  margin-bottom: 0em; }

li.last-item {
  margin-bottom: 1em;
}

ul {
  list-style: disc outside none; }

ol {
  list-style: decimal outside none; }

pre, code {
  font-family: "Source Code Pro", monospace;
  background-color: #f8f8f8;
  font-size: 14px; }

pre {
  padding: 10px;
  line-height: 1.5em;
  margin-bottom: 1em;
  word-wrap: normal;
  word-break: normal;
  border-radius: 3px;
  border: 1px solid #e4e4e4; }

/* this styles the code inside chunks */
pre code {
    font-size: .9rem;
    display: inline;
    padding: 0;
    margin: 0;
    background-color: inherit;
    border-radius: 0;
    border: none;
}

/* this styles the inline code */
code {
  font-size: 1em;
  color: #606060;
  display: inline-block;
  margin: 1px 5px;
  padding: 1px 4px;
  background-color: #f8f8f8;
  border-radius: 3px;
  border: 1px solid #e4e4e4; }

blockquote {
  font-size: 1.1em;
  font-weight: 300;
  font-style: italic;
  margin: 20px 0 20px .9em;
  padding-left: 1em;
  border-left: 3px solid #e4e4e4; }

@media screen and (max-width: 1023px) {
  blockquote {
    margin-left: 20px; } }

img {
  max-width: 100%; }

#TableOfContents ul:nth-child(1) {
  list-style: none;
  padding-left: 0; }

strong {
  font-weight: bold; }

em {
  font-style: italic; }

.stopFloatBefore:before {
  content: ".";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both; }

.bookCover {
  width: 320px;
  height: auto;
  -moz-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.1);
  -webkit-transform: rotate(359deg);
  transform: rotate(359deg);
  float: left;
  margin: 20px 50px 40px 0; }

@media screen and (max-width: 800px) {
  .bookCover {
    float: none;
    margin-bottom: 0; } }

#homeContent {
  background-color: #fff; }
  #homeContent .band .bandContent {
    display: flex;
    justify-content: space-between;
    display: -ms-flexbox;
    -ms-flex-pack: justify;
    display: -webkit-box;
    display: -webkit-flex;
    -webkit-justify-content: space-between; }
  #homeContent .band .blurb {
    font-weight: 300;
    display: inline-block;
    min-height: 160px;
    font-size: 24px;
    line-height: 40px;
    max-width: 48%; }
    #homeContent .band .blurb .tagline {
      font-size: 36px;
      margin-bottom: 16px; }
      #homeContent .band .blurb .tagline.small {
        margin-top: 62px;
        line-height: 30px;
        font-size: 24px; }
    #homeContent .band .blurb a {
      font-weight: 500; }
  #homeContent .band.first {
    height: 690px; }
    #homeContent .band.first .bandContent {
      padding-top: 220px;
      height: 100%;
      background-image: url(images/tidy-back-01.svg);
      background-repeat: no-repeat;
      background-size: 570px 690px; }
  #homeContent .band.second {
    height: 952px;
    background-color: #fdeba4; }
    #homeContent .band.second .bandContent {
      padding-top: 120px;
      padding-bottom: 100px;
      height: 100%;
      background-image: url(images/tidy-back-02.svg);
      background-repeat: no-repeat;
      background-size: 700px 952px; }
  #homeContent .band.third {
    height: 450px; }
/* ... */

